pushing a lot of progress, but stuck wrestling with setIntervals at the moment to make the colours of the tiles fade in. aside from this issue all that remains is fixing/applying duplicate letter checks and the logic should be finished barring edge cases, and then it's all cosmetics.

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
   height: 80px;
   border: 3px solid black;
   margin: 20px;
+  color: rgba(red, green, blue, alpha);
 }
 
 #gameArea {
